--- a/src/sass/_about-footer.scss
+++ b/src/sass/_about-footer.scss
@@ -184,8 +184,8 @@ H1:hover:after {
 
 .team__member:hover,
 .team__member:focus {
-  animation: none; /* Oprește animația */
-  // transform: scale(1.3); /* Aplica efectul dorit */
+  animation: none; /* Stops the animation */
+  // transform: scale(1.3); /* Apply the desired effect */
 }
 
 @keyframes pulse {
@@ -317,12 +317,12 @@ H1:hover:after {
 
 
 
-/* Scrollbar stilizat pentru un container specific */
+/* Stylized scrollbar for a specific container */
 .kontainer {
-  overflow-y: auto; /* Activează scroll-ul */
+  overflow-y: auto; /* Enables scrolling */
 
-  scrollbar-width: thin; /* Pentru Firefox */
-  scrollbar-color: #ff5050 rgba(0, 0, 0, 0.1); /* Thumb și track pentru Firefox */
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #ff5050 rgba(0, 0, 0, 0.1); /* Thumb & track for Firefox */
 }
 
 .kontainer:hover {
