--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -245,7 +245,7 @@
   font-size: 12px;
 }
 
-/* Stilizare pentru mobil */
+/* Mobile styling */
 @media screen and (max-width: 767px) {
   body.modal-open {
     overflow: hidden;
@@ -329,7 +329,7 @@
   }
 }
 
-/* Stilizare pentru Tablete */
+/* Tablet styling */
 @media screen and (min-width: 768px) and (max-width: 992px) {
   .modal-wrapper {
     overflow: hidden;
