--- a/src/sass/_about-footer.scss
+++ b/src/sass/_about-footer.scss
@@ -180,6 +180,7 @@ H1:hover:after {
   transition: transform 450ms cubic-bezier(0.4, 0, 0.2, 1);
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   animation: pulse 3s ease-in-out infinite;
+  padding-bottom: 30px;
 }
 
 .team__member:hover,
